# coodo-be

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  sqlx-data.json
.github/workflows/: general.yml
config/: base.yaml  production.yaml
migrations/: 20230727073712_create_user_sessions_table.sql  20230731131105_create_todo_lists_table.sql  20230731132210_create_todo_tasks_table.sql
scripts/: init_db.sh  redis_session.lua  redis_todo_list.lua  run_redis.sh
src/: lib.rs  main.rs  session.rs  settings.rs  startup.rs  state.rs  telemetry.rs  user.rs  utils.rs
src/routes/: mod.rs  session.rs  todo.rs
src/todo/: command.rs  handle.rs  list.rs  mod.rs  task.rs
tests/api/: helpers.rs  main.rs  session.rs  todo.rs
