[package]
name = "coodo-be"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "coodo_be"

[dependencies]
anyhow = "1.0.72"
axum = { version = "0.6.19", features = ["tracing", "ws"] }
axum-sessions = "0.5.0"
chrono = { version = "0.4.26", features = ["serde"] }
config = "0.13.3"
futures-util = "0.3.28"
hyper = "0.14.27"
petname = { version = "1.1.3", default-features = false, features = [
    "default_dictionary",
    "std_rng",
] }
rand = { version = "0.8.5", features = ["std_rng"] }
serde = { version = "1.0.175", features = ["derive"] }
serde-aux = "4.2.0"
serde_json = "1.0.104"
serde_with = "3.1.0"
sqlx = { version = "0.6.3", default-features = false, features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "migrate",
    "offline",
    "uuid",
    "chrono",
] }
tokio = { version = "1.29.1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["trace", "catch-panic"] }
tracing = { version = "0.1.37", features = ["attributes"] }
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }

[dev-dependencies]
once_cell = "1.18.0"
tokio-tungstenite = "0.19.0"
reqwest = { version = "0.11.18", features = [
    "json",
    "cookies",
    "tokio-rustls",
] }
